2.1-beta 1
===========
- fixed the clean target in the sleep build.xml file

2.0-release
===========
- added a -version, -v, --version command line switch to see what
  Sleep version you're using :)
- HOES now automatically converts a 1-dimensional Sleep array into
  a Java array for argument matching (of any Object/non-primitive
  type).  This is a potential area of improvement for the future
  if there is enough demand for it...

  Auto casting is also done for int arrays, double arrays, and float
  arrays.  The first element of the array determines the overarching
  type.  More sophisticated casting should be done using the cast
  function (detailed later in this changelog)
- added function &flatten(@array) for flattening a multidimensional
  array into a 1-dimensional array.
- HOES now recognizes a desired short argument and can build a value
  for it...  (the Java primitive type short)
- when an error occurs sleep will now immediately jump out of the
  currently executing block.
- added a &cast(@var, 't', ...) which casts @var into a native java
  array with a type t (b = byte, c = char, i = int, etc..).  
  Any arguments specified represent the dimensions of the array i.e.
  &cast(@var, 'l', 2, 3) casts @var into a 2x3 array of Java longs.
- &sort now throws an IllegalArgumentException if not enough args
  are specified (I've been bitten by accidentally using &sort when
  I really wanted &sorta and friends...)
- added the ability for fork(&closure, ...) to take an initial set
  of values to pass to the forked script environment.  this feature
  comes with a heavy warning, see the docs for more details

2.0-b11
=======
- fixed a fringe case with the Z unpack character
- cleaned up definitions of pack for z/Z/u/U
- made backslash in single quoted strings behave properly:
  \' is a single quotes; \\ is a \; \ otherwise has no meaning

  I hate changes that break compatability with old scripts (especially